# Brain-Controller-App

./: .gitignore  README.md  pyproject.toml
controller/: Joystick.py  JoystickController.py  controler_inputs.ipynb  controller_inputs.txt  example1.ipynb
controller/.ipynb_checkpoints/: controler_inputs-checkpoint.ipynb
controllerinput/: __init__.py  joystick.py  joystick_controller.py
controllerinput.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: controler_inputs.ipynb  example1.ipynb  joysticknotebook.ipynb
